--- a/src/Mod/Arch/CMakeLists.txt
+++ b/src/Mod/Arch/CMakeLists.txt
@@ -28,7 +28,7 @@ ADD_CUSTOM_TARGET(Arch ALL
     SOURCES ${all_files}
 )
 
-fc_copy_sources("Mod/Arch" "Arch" ${all_files})
+fc_copy_sources(Arch "${CMAKE_BINARY_DIR}/Mod/Arch" ${all_files})
 
 INSTALL(
     FILES ${Arch_SRCS}
