--- a/src/Mod/Idf/CMakeLists.txt
+++ b/src/Mod/Idf/CMakeLists.txt
@@ -49,7 +49,7 @@ ADD_CUSTOM_TARGET(Idf ALL
     SOURCES ${all_files}
 )
 
-fc_copy_sources("Mod/Idf" "Idf" ${all_files})
+fc_copy_sources(Idf "${CMAKE_BINARY_DIR}/Mod/Idf" ${all_files})
 
 INSTALL(
     FILES
