--- a/src/Mod/Import/Gui/CMakeLists.txt
+++ b/src/Mod/Import/Gui/CMakeLists.txt
@@ -40,8 +40,12 @@ SET(ImportGui_SRCS
 
 add_library(ImportGui SHARED ${ImportGui_SRCS})
 target_link_libraries(ImportGui ${ImportGui_LIBS})
-fc_copy_script("Mod/Import" "ImportGui" Init.py)
-fc_copy_script("Mod/Import" "ImportGui" InitGui.py)
+
+
+fc_target_copy_resource(ImportGui 
+    ${CMAKE_SOURCE_DIR}/src/Mod/Import
+    ${CMAKE_BINARY_DIR}/Mod/Import
+    Init.py InitGui.py)
 
 if(MSVC)
     set_target_properties(ImportGui PROPERTIES SUFFIX ".pyd")
