--- a/src/Mod/Mesh/Gui/CMakeLists.txt
+++ b/src/Mod/Mesh/Gui/CMakeLists.txt
@@ -109,7 +109,12 @@ SET(MeshGui_SRCS
 
 add_library(MeshGui SHARED ${MeshGui_SRCS})
 target_link_libraries(MeshGui ${MeshGui_LIBS})
-fc_copy_script("Mod/Mesh" "MeshGui" InitGui.py)
+
+
+fc_target_copy_resource(MeshGui 
+    ${CMAKE_SOURCE_DIR}/src/Mod/Mesh
+    ${CMAKE_BINARY_DIR}/Mod/Mesh
+    InitGui.py)
 
 if(MSVC)
     set_target_properties(MeshGui PROPERTIES SUFFIX ".pyd")
