--- a/src/Mod/PartDesign/Gui/CMakeLists.txt
+++ b/src/Mod/PartDesign/Gui/CMakeLists.txt
@@ -121,7 +121,12 @@ SET(PartDesignGui_SRCS
 
 add_library(PartDesignGui SHARED ${PartDesignGui_SRCS})
 target_link_libraries(PartDesignGui ${PartDesignGui_LIBS})
-fc_copy_script("Mod/PartDesign" "PartDesignGui" ${PartDesignGui_Scripts})
+
+
+fc_target_copy_resource(PartDesignGui 
+    ${CMAKE_SOURCE_DIR}/src/Mod/PartDesign
+    ${CMAKE_BINARY_DIR}/Mod/PartDesign
+    ${PartDesignGui_Scripts})
 
 if(MSVC)
     set_target_properties(PartDesignGui PROPERTIES SUFFIX ".pyd")
