--- a/src/Mod/ReverseEngineering/App/CMakeLists.txt
+++ b/src/Mod/ReverseEngineering/App/CMakeLists.txt
@@ -32,7 +32,12 @@ SET(Reen_SRCS
 
 add_library(ReverseEngineering SHARED ${Reen_SRCS})
 target_link_libraries(ReverseEngineering ${Reen_LIBS})
-fc_copy_script("Mod/ReverseEngineering" "ReverseEngineering" Init.py)
+
+
+fc_target_copy_resource(ReverseEngineering 
+    ${CMAKE_SOURCE_DIR}/src/Mod/ReverseEngineering
+    ${CMAKE_BINARY_DIR}/Mod/ReverseEngineering
+    Init.py)
 
 if(MSVC)
     set_target_properties(ReverseEngineering PROPERTIES SUFFIX ".pyd")
