--- a/src/Mod/Test/Gui/CMakeLists.txt
+++ b/src/Mod/Test/Gui/CMakeLists.txt
@@ -53,7 +53,7 @@ add_library(QtUnitGui SHARED ${TestGui_SRCS})
 target_link_libraries(QtUnitGui ${TestGui_LIBS})
 add_dependencies(QtUnitGui Test)
 
-fc_copy_sources_outpath("Mod/Test" "QtUnitGui" qtunittest.py)
+fc_copy_sources(QtUnitGui "${CMAKE_BINARY_DIR}/Mod/Test" qtunittest.py)
 
 if(MSVC)
     set_target_properties(QtUnitGui PROPERTIES SUFFIX ".pyd")
