--- a/src/3rdParty/CMakeLists.txt
+++ b/src/3rdParty/CMakeLists.txt
@@ -20,16 +20,18 @@ elseif(FREECAD_BUILD_GUI AND FREECAD_LIBPACK_CHECKFILE7X)
 #endif(MINGW)
 # applies for Unix, MinGW and Windows with custom LibPack
 elseif(FREECAD_BUILD_GUI)
-    find_path(COIN_VERSION3 Inventor/scxml/ScXML.h ${COIN3D_INCLUDE_DIR})
-    if (COIN_VERSION3)
-    if (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/Pivy-0.5)
-        add_subdirectory(Pivy-0.5)
-    endif (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/Pivy-0.5)
-    else (COIN_VERSION3)
-    if (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/Pivy)
-        add_subdirectory(Pivy)
-    endif (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/Pivy)
-    endif(COIN_VERSION3)
+    if (NOT FREECAD_BUILD_DEBIAN)
+        find_path(COIN_VERSION3 Inventor/scxml/ScXML.h ${COIN3D_INCLUDE_DIR})
+        if (COIN_VERSION3)
+        if (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/Pivy-0.5)
+            add_subdirectory(Pivy-0.5)
+        endif (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/Pivy-0.5)
+        else (COIN_VERSION3)
+        if (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/Pivy)
+            add_subdirectory(Pivy)
+        endif (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/Pivy)
+        endif(COIN_VERSION3)
+    endif (NOT FREECAD_BUILD_DEBIAN)
 endif(FREECAD_BUILD_GUI AND FREECAD_LIBPACK_CHECKFILE6X)
 
 # For Windows we have all stuff in the LibPack
