0000652: Polish language not available even if translation is available in source

--- a/src/Gui/Language/Makefile.am
+++ b/src/Gui/Language/Makefile.am
@@ -23,6 +23,7 @@ EXTRA_DIST = \
 		FreeCAD_it.qm \
 		FreeCAD_nl.qm \
 		FreeCAD_no.qm \
+		FreeCAD_pl.qm \
 		FreeCAD_pt.qm \
 		FreeCAD_ru.qm \
 		FreeCAD_se.qm \
@@ -37,6 +38,7 @@ EXTRA_DIST = \
 		FreeCAD_it.ts \
 		FreeCAD_nl.ts \
 		FreeCAD_no.ts \
+		FreeCAD_pl.ts \
 		FreeCAD_pt.ts \
 		FreeCAD_ru.ts \
 		FreeCAD_se.ts \
