--- a/src/Mod/Mesh/Gui/Makefile.am
+++ b/src/Mod/Mesh/Gui/Makefile.am
@@ -146,6 +146,8 @@ EXTRA_DIST = \
 		Resources/translations/Mesh_nl.ts \
 		Resources/translations/Mesh_no.qm \
 		Resources/translations/Mesh_no.ts \
+		Resources/translations/Mesh_pl.qm \
+		Resources/translations/Mesh_pl.ts \
 		Resources/translations/Mesh_pt.qm \
 		Resources/translations/Mesh_pt.ts \
 		Resources/translations/Mesh_ru.qm \
