--- a/src/Mod/PartDesign/Gui/Resources/Makefile.am
+++ b/src/Mod/PartDesign/Gui/Resources/Makefile.am
@@ -25,6 +25,8 @@ EXTRA_DIST = \
 		translations/PartDesign_nl.ts \
 		translations/PartDesign_no.qm \
 		translations/PartDesign_no.ts \
+		translations/PartDesign_pl.qm \
+		translations/PartDesign_pl.ts \
 		translations/PartDesign_pt.qm \
 		translations/PartDesign_pt.ts \
 		translations/PartDesign_ru.qm \
