--- a/src/Mod/ReverseEngineering/Gui/Resources/Makefile.am
+++ b/src/Mod/ReverseEngineering/Gui/Resources/Makefile.am
@@ -26,6 +26,8 @@ EXTRA_DIST = \
 		translations/ReverseEngineering_nl.ts \
 		translations/ReverseEngineering_no.qm \
 		translations/ReverseEngineering_no.ts \
+		translations/ReverseEngineering_pl.qm \
+		translations/ReverseEngineering_pl.ts \
 		translations/ReverseEngineering_pt.qm \
 		translations/ReverseEngineering_pt.ts \
 		translations/ReverseEngineering_ru.qm \
