--- a/src/Mod/Sketcher/Gui/Resources/Makefile.am
+++ b/src/Mod/Sketcher/Gui/Resources/Makefile.am
@@ -92,6 +92,8 @@ icons/Constraint_PointOnObject.svg \
 		translations/Sketcher_nl.ts \
 		translations/Sketcher_no.qm \
 		translations/Sketcher_no.ts \
+		translations/Sketcher_pl.qm \
+		translations/Sketcher_pl.ts \
 		translations/Sketcher_pt.qm \
 		translations/Sketcher_pt.ts \
 		translations/Sketcher_ru.qm \
