--- a/src/Mod/Drawing/Gui/Resources/Makefile.am
+++ b/src/Mod/Drawing/Gui/Resources/Makefile.am
@@ -32,6 +32,7 @@ EXTRA_DIST = \
 		translations/Drawing_it.qm \
 		translations/Drawing_nl.qm \
 		translations/Drawing_no.qm \
+		translations/Drawing_pl.qm \
 		translations/Drawing_pt.qm \
 		translations/Drawing_ru.qm \
 		translations/Drawing_se.qm \
@@ -46,6 +47,7 @@ EXTRA_DIST = \
 		translations/Drawing_it.ts \
 		translations/Drawing_nl.ts \
 		translations/Drawing_no.ts \
+		translations/Drawing_pl.ts \
 		translations/Drawing_pt.ts \
 		translations/Drawing_ru.ts \
 		translations/Drawing_se.ts \
