Changes to compile on Centos5.6

--- a/src/Mod/Machining_Distortion/CMakeLists.txt
+++ b/src/Mod/Machining_Distortion/CMakeLists.txt
@@ -4,6 +4,8 @@ SET(MachDist_SRCS
     InitGui.py
     ApplyingBC_IC.py
     mach_dist_gui.py
+	machdist_rc.py
+	Parameter.py
     postprocess.py
     postprocess_gui.py
 	calculix_postprocess.py
@@ -15,11 +17,11 @@ SET(MachDist_SRCS
 SOURCE_GROUP("" FILES ${MachDist_SRCS})
 
 
-ADD_CUSTOM_TARGET( ALL
+ADD_CUSTOM_TARGET(Machining_Distortion ALL
     SOURCES ${MachDist_SRCS}
 )
 
-fc_copy_sources(MachDistortion "${CMAKE_BINARY_DIR}/Mod/Machining_Distortion" ${MachDist_SRCS})
+fc_copy_sources(Machining_Distortion "${CMAKE_BINARY_DIR}/Mod/Machining_Distortion" ${MachDist_SRCS})
 
 
 INSTALL(
