--- a/src/Mod/Arch/Makefile.am
+++ b/src/Mod/Arch/Makefile.am
@@ -26,7 +26,8 @@ data_DATA = \
 		ArchSectionPlane.py \
 		ArchWindow.py \
 		ArchCommands.py \
-		ArchAxis.py
+		ArchAxis.py \
+		ArchVRM.py
 
 CLEANFILES = $(BUILT_SOURCES)
 
