--- a/src/Mod/Cam/App/CMakeLists.txt
+++ b/src/Mod/Cam/App/CMakeLists.txt
@@ -88,7 +88,11 @@ SET(Cam_SRCS
 
 add_library(Cam SHARED ${Cam_SRCS})
 target_link_libraries(Cam ${Cam_LIBS})
-fc_copy_script("Mod/Cam" "Cam" Init.py)
+
+fc_target_copy_resource(Cam 
+    ${CMAKE_SOURCE_DIR}/src/Mod/Cam
+    ${CMAKE_BINARY_DIR}/Mod/Cam
+    Init.py)
 
 if(MSVC)
     set_target_properties(Cam PROPERTIES SUFFIX ".pyd")
